--- a/index1.html
+++ b/index1.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>praktikum1</title>
+    <title>praktikum 1</title>
 </head>
 <body>
-    <h2>pemrograman web</h2>
-    <p>tugas praktikum 1</p>
+    <h1>Pemrograman web</h1>
+    <p>selamat datang di praktikum pemrograman web</p>
 </body>
 </html>
