--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brewww</title>
+    <title>praktikum 1</title>
 </head>
 <body>
-    <h1>Assalamualaikum Semester 4</h1>
-    <p>Welcome to the Brewww project!</p>
+    <h1>Pemrograman web</h1>
+    <p>selamat datang di praktikum pemrograman web</p>
 </body>
 </html>
