--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Pemrograman web</h1>
-    <p>selamat dat.ang di praktikum pemrograman web</p>
+    <p>selamat datang di praktikum pemrograman web!</p>
 </body>
 </html>
